--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ flake8==5.0.4
 mccabe==0.7.0
 mypy==0.982
 mypy-extensions==0.4.3
+pre-commit-hooks==4.3.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 tomli==2.0.1
 typing_extensions==4.4.0
